<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/item_bottom_home"
        android:icon="@drawable/baseline_local_florist_black_24dp"
        android:title="@string/bottom_home_tree"
        android:visible="true" />
    <item
        android:id="@+id/item_bottom_notification"
        android:icon="@drawable/baseline_favorite_black_24dp"
        android:title="@string/item_bottom_notification" />
    <item
        android:id="@+id/item_bottom_maps"
        android:icon="@drawable/baseline_public_black_24dp"
        android:title="@string/item_bottom_maps" />
    <item
        android:id="@+id/item_bottom_account"
        android:icon="@drawable/baseline_person_black_24dp"
        android:title="@string/item_bottom_account" />
</menu>